tests/test_compile/cases/internal_variables.stderr
error[E0425]: cannot find value `fail` in this scope
  --> $DIR/internal_variables.rs:90:5
   |
90 |     fail
   |     ^^^^ not found in this scope
